# agent-ui-workshop

./: .gitignore  INSPIRATION.md  README.md  lefthook.yml  package-lock.json  package.json  skills-lock.json
.agents/skills/ai-elements/: SKILL.md
.agents/skills/ai-elements/references/: agent.md  attachments.md  checkpoint.md  code-block.md  confirmation.md  conversation.md  image.md  (+19 more)
.agents/skills/brainstorm-agent/: SKILL.md
.agents/skills/code-simplifier/: SKILL.md
.agents/skills/implement-ai-sdk-agent/: SKILL.md
.agents/skills/implement-pydantic-ai-agent/: SKILL.md
.agents/skills/vercel-react-best-practices/: AGENTS.md
.github/instructions/: main.instructions.md  specs.instructions.md
agent/: pyproject.toml
agent/src/agent/: __init__.py  agent.py  chat_router.py  server.py
app/: globals.css  layout.tsx  page.tsx
components/agent/: agent-chat-pane.tsx  agent-data-panel.tsx  agent-workspace.tsx  arxiv-paper-panel.tsx  sql-result-panel.tsx
components/ai-elements/: attachments.tsx  code-block.tsx  conversation.tsx  message.tsx  persona.tsx  prompt-input.tsx  reasoning.tsx  shimmer.tsx  tool.tsx
components/chat/: chat-header.tsx  chat-message-list.tsx  chat-message-part.tsx  chat-message-parts.ts  chat-message-row.tsx  chat-prompt.tsx  chat-tool-part.tsx
components/ui/: dialog.tsx  input-group.tsx  resizable.tsx
hooks/: use-chat-session.ts
lib/: agents.ts  arxiv-agent.ts  arxiv-api.ts  chat-types.ts
specs/: Changelog.md  Glossary.md  Goals.md  PRD.md  README.md  Vision.md  agent-surfaces-and-arxiv-agent.md
specs/Architecture/: README.md
(+38 files in other folders)
